<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_category_display">

        <ListPreference
            android:key="temperature_unit"
            android:title="@string/preference_temperature_unit"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="Celsius"
            android:entries="@array/list_temperature_units"
            android:entryValues="@array/list_temperature_units" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_ringtone">

        <SwitchPreference
            android:key="is_ringtone_enabled"
            android:defaultValue="true"
            android:title="@string/preference_is_ringtone_enabled"/>

        <Preference
            android:key="ringtone"
            android:title="@string/preference_ringtone" />

    </PreferenceCategory>

</PreferenceScreen>